k8s/java.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-api
  namespace: iness
spec:
  replicas: 1
  selector:
    matchLabels:
      app: java-api
  template:
    metadata:
      labels:
        app: java-api
    spec:
      containers:
        - name: java-api
          image: registry.digitalocean.com/iness/java-market:e390707397e5d7758087340cdc01282abb57c3c1
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: java-api
  namespace: iness
spec:
  selector:
    app: java-api
  ports:
    - port: 8081
      targetPort: 8081
  type: ClusterIP
