k8s/python.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-api
  namespace: iness
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-api
  template:
    metadata:
      labels:
        app: python-api
    spec:
      containers:
        - name: python-api
          image: registry.digitalocean.com/iness/python-agent:2fd2b5faae3e7a0e42641d565c013c969b9f31e2
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: python-api
  namespace: iness
spec:
  selector:
    app: python-api
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
