k8s/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: iness
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: registry.digitalocean.com/iness/web-dashboard:0218a1f53c420eddec8777be69a3b9371d2a7a31
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: iness
spec:
  selector:
    app: web
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
